--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 #header {
     background: url("/images/curl.gif") 97% 27% no-repeat;
-    height: 13vh;
+    /* height: 13vh */
     background-color: rgb(123, 196, 13);
 }
 #header img{
@@ -62,11 +62,19 @@ h1 b {
     color: rgb(132, 216, 5);
 }
 
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .content {
     width: 80%;
     justify-content: right;
     /* border: 1px dashed black; */
-    float: left;
+    /* float: left; */
+
 }
 
 .content p {
@@ -86,11 +94,11 @@ h1 b {
 
 .right-content {
     float: right;
-    /* border: 1px solid black; */
     width: 18%;
     margin: 0.2em 0em;
     padding: 0.5em;
     text-align: center;
+    
 }
 
 #search {
@@ -109,7 +117,7 @@ h1 b {
     height: 1em;
     padding: 0.5em 0em 0.5em 1em;
     text-align: left;
-    width: 100%;
+    width: 96%;
     margin-left: -0.5em;
 
 }
@@ -120,6 +128,7 @@ h1 b {
     text-align: left;
     padding-left: 0.5em;
     margin-bottom: 0.5em;
+    clear: both;
 }
 
 .Assam img {
@@ -178,7 +187,6 @@ td {
 
 .footer {
     clear: both;
-    width: 100%;
     padding: 1em 0em 0em 1em;
     height: 2em;
     background-color: rgb(123, 196, 13);
